// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parallel > should run tasks parallely 1`] = `
[log] <Yellow>></Yellow> Task <Bold>task-A.[01]</BoldDim> started
[log] <Yellow>></Yellow> Task <Bold>task-A.[01]</BoldDim> started
[log] <Green>✓</Green> Task <Bold>task-A.[01]</BoldDim> done in 1._s
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim> started
[log] <Green>✓</Green> Task <Bold>task-A.[01]</BoldDim> done in 2._s
[log] <Green>✓</Green> Task <Bold>task-A.2</BoldDim> done in 1._s
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim> started
[log] <Green>✓</Green> Task <Bold>task-A</BoldDim> done in 1._s
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>4._s</BoldDim> <Dim>(<Bold>4</BoldDim><Dim> tasks executed)</BoldDim>
`;

exports[`Parallel > should stop on error immediately > stderr 1`] = `""`;

exports[`Parallel > should stop on error immediately > stdout 1`] = `
[log] <Yellow>></Yellow> Task <Bold>task-A.[01]</BoldDim> started
[log] <Yellow>></Yellow> Task <Bold>task-A.[01]</BoldDim> started
[log] <Green>✓</Green> Task <Bold>task-A.[01]</BoldDim> done in 1._s
[log] <Green>✓</Green> Task <Bold>task-A.[01]</BoldDim> done in 2._s
[log] <Yellow>></Yellow> Task <Bold>throwable</BoldDim> started
[log] <Red>×</Red> Task <Bold>throwable</BoldDim> failed in _ms
[log] 
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>2._s</BoldDim> <Dim>(<Bold>2</BoldDim><Dim> tasks executed, <Bold>1</BoldDim><Dim> task failed)</BoldDim>
`;
